Fix: crash when clicking on the "use same curve" checkbox before selecting a sensor

BUG: 267093